--- a/src/application/edu/insightr/gildedrose/Inventory.fxml
+++ b/src/application/edu/insightr/gildedrose/Inventory.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.insightr.gildedrose.InventoryController">
 
-      <TableView fx:id="itemTable" layoutX="14.0" layoutY="14.0" prefHeight="600.0" prefWidth="500.0">
+      <TableView fx:id="itemTable" layoutX="8.0" layoutY="43.0" prefHeight="600.0" prefWidth="500.0">
         <columns>
           <TableColumn fx:id="itemName" prefWidth="300.0" text="Name">
               <cellValueFactory><PropertyValueFactory property="name" /></cellValueFactory>
@@ -21,6 +23,10 @@
             </TableColumn>
         </columns>
       </TableView>
-       <Button fx:id="btnUpdate" layoutX="230.0" layoutY="624.0" onAction="#onUpdate" text="Update" />
-
+       <Button fx:id="btnUpdate" layoutX="220.0" layoutY="652.0" onAction="#onUpdate" text="Update" />
+   <Label layoutX="176.0" layoutY="-6.0" text="Inventory">
+      <font>
+         <Font size="36.0" />
+      </font>
+   </Label>
 </AnchorPane>
