--- a/src/main/resources/Inventory.fxml
+++ b/src/main/resources/Inventory.fxml
@@ -1,51 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="655.0" prefWidth="1181.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.insightr.gildedrose.InventoryController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="655.0" prefWidth="1181.0"
+            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="edu.insightr.gildedrose.InventoryController">
 
     <TableView fx:id="itemTable" layoutX="14.0" layoutY="14.0" prefHeight="600.0" prefWidth="600.0">
         <columns>
             <TableColumn prefWidth="300.0" text="Name">
                 <cellValueFactory>
-                    <PropertyValueFactory property="name" />
+                    <PropertyValueFactory property="name"/>
                 </cellValueFactory>
             </TableColumn>
             <TableColumn prefWidth="100.0" text="SellIn">
                 <cellValueFactory>
-                    <PropertyValueFactory property="sellIn" />
+                    <PropertyValueFactory property="sellIn"/>
                 </cellValueFactory>
             </TableColumn>
             <TableColumn prefWidth="100.0" text="Quality">
                 <cellValueFactory>
-                    <PropertyValueFactory property="quality" />
+                    <PropertyValueFactory property="quality"/>
                 </cellValueFactory>
             </TableColumn>
             <TableColumn prefWidth="100.0" text="Creationdate">
                 <cellValueFactory>
-                    <PropertyValueFactory property="creationdate" />
+                    <PropertyValueFactory property="creationdate"/>
                 </cellValueFactory>
             </TableColumn>
         </columns>
     </TableView>
-    <Button layoutX="195.0" layoutY="624.0" onAction="#onUpdate" text="Update" />
-    <Button layoutX="101.0" layoutY="624.0" mnemonicParsing="false" onAction="#onLoad" text="Load File" />
-    <PieChart fx:id="pieChart" layoutX="523.0" layoutY="14.0" />
-   <BarChart fx:id="barChart" layoutX="574.0" layoutY="465.0" prefHeight="361.0" prefWidth="552.0">
-     <xAxis>
-       <CategoryAxis side="BOTTOM" />
-     </xAxis>
-     <yAxis>
-       <NumberAxis side="LEFT" />
-     </yAxis>
-   </BarChart>
+    <Button layoutX="195.0" layoutY="624.0" onAction="#onUpdate" text="Update"/>
+    <Button layoutX="101.0" layoutY="624.0" mnemonicParsing="false" onAction="#onLoad" text="Load File"/>
+    <PieChart fx:id="pieChart" layoutX="643.0" layoutY="21.0" prefHeight="293.0" prefWidth="348.0"/>
+    <BarChart fx:id="barChartSellIn" layoutX="623.0" layoutY="336.0" prefHeight="249.0" prefWidth="377.0">
+        <xAxis>
+            <CategoryAxis side="BOTTOM"/>
+        </xAxis>
+        <yAxis>
+            <NumberAxis side="LEFT"/>
+        </yAxis>
+    </BarChart>
+    <BarChart fx:id="barChartDate" layoutX="1013.0" layoutY="50.0" prefHeight="235.0" prefWidth="206.0">
+        <xAxis>
+            <CategoryAxis side="BOTTOM"/>
+        </xAxis>
+        <yAxis>
+            <NumberAxis side="LEFT"/>
+        </yAxis>
+    </BarChart>
 
 </AnchorPane>
